@@ -1,3 +1,9 @@
+2004-05-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* data/pixmaps/extension24.png initalnode24.png,
+	activityfinalnode24.png, activityfinalnode.xcf: added
+	* gaphor/ui/stock.py: added the new icons as stock icons.
+
 2004-05-12  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/diagram/extension.py: new file. Used to create stereotypes
